entrega intermediaria ajustes